@@ -17,6 +17,9 @@ Package org.springframework.osgi.io
 * improved OsgiBundlePatternMatchingResolver to return ContextResources
 * changed OsgiBundlePatternMatchingResolver#findResources(String) visibility to protected
 
+Package org.springframework.osgi.service
+* fixed visibility issue when invoking non-public proxied methods 
+
 
 Changes in version 1.1.2 (2008-10-03)
 -------------------------------------
